--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 Django==1.8.2
-wsgiref==0.1.2
+django-debug-toolbar==1.4
+django-grappelli==2.8.1
+djangorestframework==3.3.3
+pkg-resources==0.0.0
+psycopg2==2.6.1
+sqlparse==0.1.19
+xlrd==1.0.0
